# CG-PJ3

./: .env.example  .gitignore  ARCHITECTURE_OVERVIEW.md  README.md  pyproject.toml
configs/: models_api.yaml  models_cli.yaml
configs/concepts/: affine_transformation.yaml  (+4 more)
docs/: CURRENT_CODE_STRUCTURE_AND_COMMANDS.md  EXPERIMENT_REPORT_CURRENT.md  SUCCESS_SPEC_ARCHITECTURE_PLAN.md
report/: README.md  main.tex  references.bib
scripts/: build_ppt.py  check_llm.py  continue_critic.py  dry_replay_concept_mismatch.py  eval_concepts.py  generate_architecture_figures.py  run_concept.py
tests/: conftest.py  test_auto_success_spec.py  test_blender_coder.py  test_blender_runtime.py  test_blender_runtime_capture.py  test_blender_runtime_env_isolation.py  test_code_fence.py  test_concept_configs.py  test_concept_decomposer.py  test_concept_metrics.py  test_config.py  test_contract_validator.py  test_contract_validator_sanity.py  test_correction_controller.py  test_critic_addendum.py  test_critic_cross_reference.py  test_failure_memory.py  test_failure_memory_concurrency.py  test_ffmpeg_filter.py  test_ffmpeg_invocation.py  test_formula_fallback.py  test_frame_sampling.py  test_json_extraction.py  test_llm_cooldown.py  test_logging_setup.py  test_pipeline_loop.py  test_preview.py  test_repair_plan.py  test_scene_compiler.py  test_scene_ir.py  test_scene_profiles.py  test_scene_state.py  test_scene_verifier.py  test_security_hardening.py  test_storyboard_sanitizer.py  test_storyboard_schema.py  test_success_spec.py  test_terminal_ui.py  test_visual_contract.py
(+105 files in other folders)
